// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Short Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Short Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Some byline"
        name="author"
      />
      <meta
        content="Some Short Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://url.io"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Short Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://url.io"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Short Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div>
            <h1
              aria-level="1"
              role="heading"
            >
              Some Short Headline
            </h1>
            <div>
              <ArticleFlags
                color="rgba(255, 255, 255, 1)"
              />
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <div>
                  <div>
                    Some Caption
                  </div>
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDITS",
                      }
                    }
                  />
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Some byline",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline=""
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  hostName="https://www.thetimes.co.uk"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <p>
              Some content
            </p>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline=""
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#005C8A"
            >
              PLAY
            </span>
            <hr />
            <span>
              PUZZLES
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/24f9/bc87/903eed2895cf7ef34c3bd86cdb19ee74?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ZKEomwG~hc7W-ITYVzz8vKI7cKX4bkZ0xv1Ll-SW9mfR621lZvjzGwFO6F5hFrPo37GTok3RUi5G6JdS4jTXwxPPIOMYfPJzwgImrbY2eKElIBD-vSPBDK9U5OXc6dmN3600vGHDvEclr8Ar0FO8ZmXwKhnUa-hM2i2~~UOCHSHorTryt-iOn28pUC4~sqXhRSdz-5FH07IoVekjFmXYhX-mz8FCHgPvE~SrhlTmemubmMvU-FttZjY~rcyr7p9IkLWyXQ3jenq8UFRiiZ9buR0LQ6MpP85ocGQ4MCRnj2uCPVEtMU6wde34oI-GpvEa-B5Cf8zVR7GtF1ZfW5gsAw__"
            />
            <a
              href="/puzzles/crossword/times-gk-crossword-no-252-n0n70whpb"
            >
              Times General Knowledge No 12345
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#005C8A"
            >
              VIDEO
            </span>
            <hr />
            <span>
              US
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/cdcb/7283/3ad7a0c137457614d3d1a693452964e1?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=g5MwasiSQlq1ZyOFr-uaC9NvL3hb1Ui3gkHd7-izDGz7zBgTSHN3~pPpEcBSwBEbzp8-dTXfITS7M4XlM5jPy3GzA7N333yrbkwqWCX~xZkHLXYjnBlwQ59ukqOaRLyWZh1vSMqQTshRPnSso07sHXh37HIWuILsM1AKs9-NgDdNaQeyZgw--70gTFHJEUQ8iQdO00BqzcvRir0SAJXC4oYSRsT6X~qLNzRucIBLfHViEEcKruSWqhv~YPkym7DgeZCYQ9kBuSWb6NxSrNtzC-FNzzIzVAjcsFrUarEEzFgZywRC3n96sBTgHG6HYdJVVpqSIhrgDhD16Y~9ri4-3Q__"
            />
            <a
              href="world/us-world/article/donald-trump-used-assassination-attempts-advantage-us-election-2024-g9mz5wf8r"
            >
              Trump used assassination attempt to his advantage
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#54145D"
            >
              PODCAST
            </span>
            <hr />
            <span>
              TIMES NEWS BRIEFING
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/8505/83db/efe4ca6f159524c5e9605c09e22beb63?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HNYdABcDQqUiXIfetUZ9OA2Lh5IZ82h6NT4eNrR0mgrj1vk0TFNkd5pbMEAgfjBNwCQPT9kQIoifJ3HE6qjb4D69RgSr~R0Y3uMhuju4jBbmgMIXsE0C1-QjJcSXtj427ttm4ObVlhHlsWRb2lFcO2mlmnRqstmCaCRGqD-oAtUXZYQCXA45Cu27c7ezqBkaMID5VeShG4Psk-JmSXmtMSiPjYwFKlEKktniFs8fnwjdyFlHWxVPt6F~JXUemvDvVFavY9XBYRKdhOd4SkoVhKLe3kvenIFX6~yDqERGaIt1Vh5jAKBnoDxvCXWn~kjIjLKFwOzqYpFmYaeqFFQfjg__"
            />
            <a
              href="/podcasts/times-news-briefing"
            >
              Evening Briefing Thursday 26th September
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              READ MORE
            </span>
            <hr />
            <span>
              SPORT
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/b168/4d1b/b9361aacf8aa15439db267471ccf52ae?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=djhM7Ifd4NH-iGmZb5IYPjRG5xrNSOCCXybgwEcfLWNTa5itFXwv715Oe8~-QYy5fenMRts0Oce6GlQ8rOhSqVhR2h1HAmJZZ8VxDL9zSWxZ~IejyHGNj0Q7LXqsxL8vfs7rypyZ94pN48bqIVvNPKi~6qf9~-qbAHx0CJJtCsQXE8102~de5dVTAn-WUIhzqY50UCaImG9IvTcX~tQxJE3aI7dYLvPa~iPpd5OxGrRaBaoQeHe-kXknkb-BpXtJ3AQvhdJXRdGSTRexyDR2eh7NQT6FJPywUz2uxYzikSzFuYYlBg2Ul2K40eQtsOBacuT0mtlwu0x0eWO5iLL~Tg__"
            />
            <a
              href="/sport/football/article/rodri-knee-injury-man-city-arsenal-x08qk7pdb"
            >
              Rodri could miss rest of season with knee injury
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#FF5656"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <a
              href="/uk/politics/article/labour-party-conference-keir-starmer-speech-latest-news-0nnkxjcqq"
            >
              'Change has begun': Starmer gives first conference speech'
            </a>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </article>
</div>
`;

exports[`4. an article with ads with .co.uk 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Some byline"
        name="author"
      />
      <meta
        content="Some Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://url.io"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://url.io"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div>
            <h1
              aria-level="1"
              role="heading"
            >
              Some Headline
            </h1>
            <div>
              <ArticleFlags
                color="rgba(255, 255, 255, 1)"
              />
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <div>
                  <div>
                    Some Caption
                  </div>
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDITS",
                      }
                    }
                  />
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Some byline",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  hostName="https://www.thetimes.co.uk"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <div>
              <h2>
                Advertisement
              </h2>
              <AdContainer
                slotName="inline-ad"
              />
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#FF5656"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <a
              href="/uk/politics/article/labour-party-conference-keir-starmer-speech-latest-news-0nnkxjcqq"
            >
              'Change has begun': Starmer gives first conference speech'
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              READ MORE
            </span>
            <hr />
            <span>
              SPORT
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/b168/4d1b/b9361aacf8aa15439db267471ccf52ae?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=djhM7Ifd4NH-iGmZb5IYPjRG5xrNSOCCXybgwEcfLWNTa5itFXwv715Oe8~-QYy5fenMRts0Oce6GlQ8rOhSqVhR2h1HAmJZZ8VxDL9zSWxZ~IejyHGNj0Q7LXqsxL8vfs7rypyZ94pN48bqIVvNPKi~6qf9~-qbAHx0CJJtCsQXE8102~de5dVTAn-WUIhzqY50UCaImG9IvTcX~tQxJE3aI7dYLvPa~iPpd5OxGrRaBaoQeHe-kXknkb-BpXtJ3AQvhdJXRdGSTRexyDR2eh7NQT6FJPywUz2uxYzikSzFuYYlBg2Ul2K40eQtsOBacuT0mtlwu0x0eWO5iLL~Tg__"
            />
            <a
              href="/sport/football/article/rodri-knee-injury-man-city-arsenal-x08qk7pdb"
            >
              Rodri could miss rest of season with knee injury
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#54145D"
            >
              PODCAST
            </span>
            <hr />
            <span>
              TIMES NEWS BRIEFING
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/8505/83db/efe4ca6f159524c5e9605c09e22beb63?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HNYdABcDQqUiXIfetUZ9OA2Lh5IZ82h6NT4eNrR0mgrj1vk0TFNkd5pbMEAgfjBNwCQPT9kQIoifJ3HE6qjb4D69RgSr~R0Y3uMhuju4jBbmgMIXsE0C1-QjJcSXtj427ttm4ObVlhHlsWRb2lFcO2mlmnRqstmCaCRGqD-oAtUXZYQCXA45Cu27c7ezqBkaMID5VeShG4Psk-JmSXmtMSiPjYwFKlEKktniFs8fnwjdyFlHWxVPt6F~JXUemvDvVFavY9XBYRKdhOd4SkoVhKLe3kvenIFX6~yDqERGaIt1Vh5jAKBnoDxvCXWn~kjIjLKFwOzqYpFmYaeqFFQfjg__"
            />
            <a
              href="/podcasts/times-news-briefing"
            >
              Evening Briefing Thursday 26th September
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#005C8A"
            >
              VIDEO
            </span>
            <hr />
            <span>
              US
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/cdcb/7283/3ad7a0c137457614d3d1a693452964e1?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=g5MwasiSQlq1ZyOFr-uaC9NvL3hb1Ui3gkHd7-izDGz7zBgTSHN3~pPpEcBSwBEbzp8-dTXfITS7M4XlM5jPy3GzA7N333yrbkwqWCX~xZkHLXYjnBlwQ59ukqOaRLyWZh1vSMqQTshRPnSso07sHXh37HIWuILsM1AKs9-NgDdNaQeyZgw--70gTFHJEUQ8iQdO00BqzcvRir0SAJXC4oYSRsT6X~qLNzRucIBLfHViEEcKruSWqhv~YPkym7DgeZCYQ9kBuSWb6NxSrNtzC-FNzzIzVAjcsFrUarEEzFgZywRC3n96sBTgHG6HYdJVVpqSIhrgDhD16Y~9ri4-3Q__"
            />
            <a
              href="world/us-world/article/donald-trump-used-assassination-attempts-advantage-us-election-2024-g9mz5wf8r"
            >
              Trump used assassination attempt to his advantage
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#005C8A"
            >
              PLAY
            </span>
            <hr />
            <span>
              PUZZLES
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/24f9/bc87/903eed2895cf7ef34c3bd86cdb19ee74?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ZKEomwG~hc7W-ITYVzz8vKI7cKX4bkZ0xv1Ll-SW9mfR621lZvjzGwFO6F5hFrPo37GTok3RUi5G6JdS4jTXwxPPIOMYfPJzwgImrbY2eKElIBD-vSPBDK9U5OXc6dmN3600vGHDvEclr8Ar0FO8ZmXwKhnUa-hM2i2~~UOCHSHorTryt-iOn28pUC4~sqXhRSdz-5FH07IoVekjFmXYhX-mz8FCHgPvE~SrhlTmemubmMvU-FttZjY~rcyr7p9IkLWyXQ3jenq8UFRiiZ9buR0LQ6MpP85ocGQ4MCRnj2uCPVEtMU6wde34oI-GpvEa-B5Cf8zVR7GtF1ZfW5gsAw__"
            />
            <a
              href="/puzzles/crossword/times-gk-crossword-no-252-n0n70whpb"
            >
              Times General Knowledge No 12345
            </a>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </article>
</div>
`;

exports[`5. an article with ads with .com 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Some byline"
        name="author"
      />
      <meta
        content="Some Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://url.io"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://url.io"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <div>
            <h1
              aria-level="1"
              role="heading"
            >
              Some Headline
            </h1>
            <div>
              <ArticleFlags
                color="rgba(255, 255, 255, 1)"
              />
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <div>
                  <div>
                    Some Caption
                  </div>
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDITS",
                      }
                    }
                  />
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Some byline",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  hostName="www.thetimes.com"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article>
        <div>
          <div>
            <div>
              <h2>
                Advertisement
              </h2>
              <AdContainer
                slotName="inline-ad"
              />
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          domainSpecificUrl="www.thetimes.com"
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#005C8A"
            >
              PLAY
            </span>
            <hr />
            <span>
              PUZZLES
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/24f9/bc87/903eed2895cf7ef34c3bd86cdb19ee74?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ZKEomwG~hc7W-ITYVzz8vKI7cKX4bkZ0xv1Ll-SW9mfR621lZvjzGwFO6F5hFrPo37GTok3RUi5G6JdS4jTXwxPPIOMYfPJzwgImrbY2eKElIBD-vSPBDK9U5OXc6dmN3600vGHDvEclr8Ar0FO8ZmXwKhnUa-hM2i2~~UOCHSHorTryt-iOn28pUC4~sqXhRSdz-5FH07IoVekjFmXYhX-mz8FCHgPvE~SrhlTmemubmMvU-FttZjY~rcyr7p9IkLWyXQ3jenq8UFRiiZ9buR0LQ6MpP85ocGQ4MCRnj2uCPVEtMU6wde34oI-GpvEa-B5Cf8zVR7GtF1ZfW5gsAw__"
            />
            <a
              href="/puzzles/crossword/times-gk-crossword-no-252-n0n70whpb"
            >
              Times General Knowledge No 12345
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#005C8A"
            >
              VIDEO
            </span>
            <hr />
            <span>
              US
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/cdcb/7283/3ad7a0c137457614d3d1a693452964e1?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=g5MwasiSQlq1ZyOFr-uaC9NvL3hb1Ui3gkHd7-izDGz7zBgTSHN3~pPpEcBSwBEbzp8-dTXfITS7M4XlM5jPy3GzA7N333yrbkwqWCX~xZkHLXYjnBlwQ59ukqOaRLyWZh1vSMqQTshRPnSso07sHXh37HIWuILsM1AKs9-NgDdNaQeyZgw--70gTFHJEUQ8iQdO00BqzcvRir0SAJXC4oYSRsT6X~qLNzRucIBLfHViEEcKruSWqhv~YPkym7DgeZCYQ9kBuSWb6NxSrNtzC-FNzzIzVAjcsFrUarEEzFgZywRC3n96sBTgHG6HYdJVVpqSIhrgDhD16Y~9ri4-3Q__"
            />
            <a
              href="world/us-world/article/donald-trump-used-assassination-attempts-advantage-us-election-2024-g9mz5wf8r"
            >
              Trump used assassination attempt to his advantage
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#54145D"
            >
              PODCAST
            </span>
            <hr />
            <span>
              TIMES NEWS BRIEFING
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/8505/83db/efe4ca6f159524c5e9605c09e22beb63?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HNYdABcDQqUiXIfetUZ9OA2Lh5IZ82h6NT4eNrR0mgrj1vk0TFNkd5pbMEAgfjBNwCQPT9kQIoifJ3HE6qjb4D69RgSr~R0Y3uMhuju4jBbmgMIXsE0C1-QjJcSXtj427ttm4ObVlhHlsWRb2lFcO2mlmnRqstmCaCRGqD-oAtUXZYQCXA45Cu27c7ezqBkaMID5VeShG4Psk-JmSXmtMSiPjYwFKlEKktniFs8fnwjdyFlHWxVPt6F~JXUemvDvVFavY9XBYRKdhOd4SkoVhKLe3kvenIFX6~yDqERGaIt1Vh5jAKBnoDxvCXWn~kjIjLKFwOzqYpFmYaeqFFQfjg__"
            />
            <a
              href="/podcasts/times-news-briefing"
            >
              Evening Briefing Thursday 26th September
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              READ MORE
            </span>
            <hr />
            <span>
              SPORT
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/b168/4d1b/b9361aacf8aa15439db267471ccf52ae?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=djhM7Ifd4NH-iGmZb5IYPjRG5xrNSOCCXybgwEcfLWNTa5itFXwv715Oe8~-QYy5fenMRts0Oce6GlQ8rOhSqVhR2h1HAmJZZ8VxDL9zSWxZ~IejyHGNj0Q7LXqsxL8vfs7rypyZ94pN48bqIVvNPKi~6qf9~-qbAHx0CJJtCsQXE8102~de5dVTAn-WUIhzqY50UCaImG9IvTcX~tQxJE3aI7dYLvPa~iPpd5OxGrRaBaoQeHe-kXknkb-BpXtJ3AQvhdJXRdGSTRexyDR2eh7NQT6FJPywUz2uxYzikSzFuYYlBg2Ul2K40eQtsOBacuT0mtlwu0x0eWO5iLL~Tg__"
            />
            <a
              href="/sport/football/article/rodri-knee-injury-man-city-arsenal-x08qk7pdb"
            >
              Rodri could miss rest of season with knee injury
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#FF5656"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <a
              href="/uk/politics/article/labour-party-conference-keir-starmer-speech-latest-news-0nnkxjcqq"
            >
              'Change has begun': Starmer gives first conference speech'
            </a>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </article>
</div>
`;
